{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 86,
  "lineage": "7d7d307b-2f58-f4a4-1e3e-9dedac2829a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03abbbfd184c5f585",
            "arn": "arn:aws:ec2:eu-north-1:700935310038:instance/i-04036c69a508943d0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04036c69a508943d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "url-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071f307e63a744ee6",
            "private_dns": "ip-10-0-3-64.eu-north-1.compute.internal",
            "private_ip": "10.0.3.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f487a3b358c69865",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095b5b59a4b8ecc1b",
            "tags": {
              "Name": "url-terraform-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "url-terraform-dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf964a6a76a5db53"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.data_bucket",
            "aws_security_group.sg_web",
            "data.aws_ami.amazon_linux_ami",
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:security-group/sg-0bf964a6a76a5db53",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bf964a6a76a5db53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "url-dev-sg",
            "name_prefix": "",
            "owner_id": "700935310038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:internet-gateway/igw-0d192a30037a92dbe",
            "id": "igw-0d192a30037a92dbe",
            "owner_id": "700935310038",
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d192a30037a92dbe",
            "id": "r-rtb-079878d1305df90aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079878d1305df90aa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_internet_gateway.this",
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:route-table/rtb-0b6eb5eda320b748b",
            "id": "rtb-0b6eb5eda320b748b",
            "owner_id": "700935310038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:route-table/rtb-0d85f97e3da728b36",
            "id": "rtb-0d85f97e3da728b36",
            "owner_id": "700935310038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:route-table/rtb-079878d1305df90aa",
            "id": "rtb-079878d1305df90aa",
            "owner_id": "700935310038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d192a30037a92dbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f111814f17c0f66b",
            "route_table_id": "rtb-0b6eb5eda320b748b",
            "subnet_id": "subnet-0cb77f02d0c5ffdc5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8ba75f1a5f0c1ed",
            "route_table_id": "rtb-0d85f97e3da728b36",
            "subnet_id": "subnet-03b018d2607d1b77c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f1240e66ebc8a4c",
            "route_table_id": "rtb-079878d1305df90aa",
            "subnet_id": "subnet-095b5b59a4b8ecc1b"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa18dc670babf18b",
            "route_table_id": "rtb-079878d1305df90aa",
            "subnet_id": "subnet-0b03841cf8d253caa"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:subnet/subnet-0cb77f02d0c5ffdc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb77f02d0c5ffdc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700935310038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:subnet/subnet-03b018d2607d1b77c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b018d2607d1b77c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700935310038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:subnet/subnet-095b5b59a4b8ecc1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095b5b59a4b8ecc1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700935310038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:subnet/subnet-0b03841cf8d253caa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b03841cf8d253caa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700935310038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb8070229c6462f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:700935310038:vpc/vpc-0cdb8070229c6462f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffdb7dd21ea3035f",
            "default_route_table_id": "rtb-0c5f8191794392f9c",
            "default_security_group_id": "sg-021db44bbdba897bc",
            "dhcp_options_id": "dopt-06b44032030b446ec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cdb8070229c6462f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5f8191794392f9c",
            "owner_id": "700935310038",
            "tags": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "url-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}